@@ -1,3 +1,8 @@
+2001-03-18  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
+
+	* w3m-antenna.el (w3m-antenna): Optional argument, `no-cache' is
+	added.
+
 2001-03-18  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* w3m.el (w3m-goto-url): Switch to buffer of w3m, certainty.
